// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svelte style preprocessor adds a banner comment 1`] = `
"
<div id=\\"target\\">test</div>

<style>
  #target {
    color: red;
  }

    #target:focus {
      background: #000;
    }
</style>
"
`;

exports[`Svelte style preprocessor adds global pseudo when global + type attributes 1`] = `
"
<style>
  :global(body) { margin: 0; }

  :global(#target) {
    color: red;
  }

  :global(#target) .focus,:global(#target):focus {
      background: #000;
    }

  :global(.wrapper)+#target {
      background: #222;
    }
</style>
"
`;

exports[`Svelte style preprocessor adds global pseudo when global attribute only 1`] = `
"
<style>
  :global(body) { margin: 0; }
  :global(#target)>.child { color: red; }
</style>
"
`;

exports[`Svelte style preprocessor compiles a component's CSS 1`] = `
":root{--body-margin:0}@media screen and (min-width: 30em){body{margin:var(--body-margin)
  }}.text.svelte-rn3jb9{color:hsl(0, 100%, 50%)}.text.svelte-rn3jb9:focus{background:hsl(0, 0%, 0%)}.wrapper.svelte-rn3jb9>.text.svelte-rn3jb9{margin-top:1rem}"
`;

exports[`Svelte style preprocessor does not process without type attribute 1`] = `
"
<div id=\\"target\\">test</div>

<style>
  #target {
    color: red;

    &:focus {
      background: #000;
    }
  }
</style>
"
`;

exports[`Svelte style preprocessor doesn't add global pseudo when already exists 1`] = `
"
<style>
  :global(body) { margin: 0; }
  :global(#target)>.child { color: red; }
</style>
"
`;

exports[`Svelte style preprocessor processes a component 1`] = `
"<!--
  TEST COMPONENT

  A simple Svelte component for use in tests.

  NOTE:
    In the code, object properties starting with __ are safe to mangle; the name
    can be shortened at build time for smaller JavaScript bundles.

-->

<div class=\\"wrapper\\">
  <a href=\\"\\">
    <img src=\\"#\\">
  </a>

  <!-- Yo yo comment -->
  <div class=\\"text\\" ref:__target>
    test {__name}
  </div>

  <div class=\\"text\\" ref:__nameReversed>
    test <span>{__reversed}</span>
  </div>
</div>

<script>
  export default {
    data: () => ({
      __name: 'Elon Musk',
    }),
    computed: {
      __reversed: ({ __name }) => __name.split('').reverse().join(''),
    },
  };
</script>

<style>
  :global(:root) {
    --body-margin: 0;
  }

  @media screen and (min-width: 30em) {

  :global(body) {
      margin: var(--body-margin)
  }
    }

  /* svelte should remove this since it doesn't match any elements in the component */
  body { filter: blur(10px); }

  .text {
    color: hsl(0, 100%, 50%);
  }

  /* red */

  .text:focus {
      background: hsl(0, 0%, 0%);  /* black */
    }

  .wrapper > .text {
      margin-top: 1rem;
    }
</style>
"
`;

exports[`Svelte style preprocessor processes a simple component 1`] = `
"
<div id=\\"target\\">test</div>

<style>
  #target {
    color: red;
  }

    #target:focus {
      background: #000;
    }
</style>
"
`;
